# terminal_graph

./: Cargo.toml  log  tags
src/: app.rs  main.rs
src/ui/: graphbox.rs  menu.rs  mod.rs
